# logger-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: basic.rs  with_tracing.rs
src/: client.rs  config.rs  entry.rs  lib.rs  tracing_layer.rs  transport.rs
tests/: integration.rs
