[package]
name = "mihari"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Mihari Contributors"]
description = "A lightweight, async log collection and transport library for Rust"
license = "MIT"
repository = "https://github.com/mihari-io/mihari-rust"
keywords = ["logging", "observability", "tracing", "log-collection"]
categories = ["development-tools::debugging"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
wiremock = "0.6"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt"] }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "with_tracing"
path = "examples/with_tracing.rs"
